--- a/Nodeserver/index.html
+++ b/Nodeserver/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realtime cheat application</title>
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <!-- On Local server -->
+    <!-- <script defer src="http://localhost:8000/socket.io/socket.io.js"></script> -->
+
+    <!-- On Live server -->
+    <script defer src="https://realtime-chat-app-11-hcxx.onrender.com/socket.io/socket.io.js"></script>
+
     <script defer src="./client.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
